--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -66,7 +66,7 @@ jobs:
         uses: Thundernerd/dotnet-project-version-updater@v1.2
         with:
           file: "source/Microservices.Analysis/Microservices.Analysis.csproj"
-          version: ${{ github.event.inputs.version }}
+          version: ${{ steps.update.outputs.newVersion }}"
 
       - name: Publish project with version
         run: dotnet publish --version-suffix=development /t:PublishContainer -c Release
@@ -81,12 +81,12 @@ jobs:
       - name: Tag built container with Azure Container Registry
         uses: actions-hub/docker/cli@master
         with:
-          args: tag microservices-analysis:latest binesty.azurecr.io/microservices-analysis:${{ steps.update.inputs.version }}
+          args: tag microservices-analysis:latest binesty.azurecr.io/microservices-analysis:${{ steps.update.outputs.newVersion }}"
       
       - name: Push built container to Azure Container Registry
         uses: actions-hub/docker/cli@master
         with:
-          args: push binesty.azurecr.io/microservices-analysis:${{ steps.update.inputs.version }}
+          args: push binesty.azurecr.io/microservices-analysis:${{ steps.update.outputs.newVersion }}"
 
       - name: Kustomize
         uses: imranismail/setup-kustomize@v2
@@ -94,7 +94,7 @@ jobs:
       - name: Update image tag version
         run: |
           cd kubernetes
-          kustomize edit set image microservices-analysis=binesty.azurecr.io/microservices-analysis:${{ steps.update.inputs.version }}
+          kustomize edit set image microservices-analysis=binesty.azurecr.io/microservices-analysis:${{ steps.update.outputs.newVersion }}"
 
       - name: Commit changes version 
         run: |
