--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -61,12 +61,23 @@ jobs:
           name: Packages-Microservices
           token: ${{secrets.TOKEN_PACKAGES_READ}}
 
-      - name: Set project version
-        id: update
-        uses: Thundernerd/dotnet-project-version-updater@v1.2
+      - name: Fetch unshallow
+        run: git fetch --prune --tags --unshallow
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v0.10.2
         with:
-          file: "source/Microservices.Analysis/Microservices.Analysis.csproj"
-          version: ${{ steps.update.outputs.newVersion }}"
+          versionSpec: '5.x'
+
+      - name: Determine Version
+        id: gitversion
+        uses: gittools/actions/gitversion/execute@v0
+
+      - name: Set version
+        id: package_version
+        uses: MWin10/set-csproj-version-fork@latest
+        with:
+          file: source/Microservices.Analysis/Microservices.Analysis.csproj
+          version: ${{ steps.gitversion.outputs.semVer }}
 
       - name: Publish project with version
         run: dotnet publish --version-suffix=development /t:PublishContainer -c Release
@@ -81,12 +92,12 @@ jobs:
       - name: Tag built container with Azure Container Registry
         uses: actions-hub/docker/cli@master
         with:
-          args: tag microservices-analysis:latest binesty.azurecr.io/microservices-analysis:${{ steps.update.outputs.newVersion }}"
+          args: tag microservices-analysis:latest binesty.azurecr.io/microservices-analysis:${{ steps.gitversion.outputs.semVer }}"
       
       - name: Push built container to Azure Container Registry
         uses: actions-hub/docker/cli@master
         with:
-          args: push binesty.azurecr.io/microservices-analysis:${{ steps.update.outputs.newVersion }}"
+          args: push binesty.azurecr.io/microservices-analysis:${{ steps.gitversion.outputs.semVer }}"
 
       - name: Kustomize
         uses: imranismail/setup-kustomize@v2
@@ -94,7 +105,7 @@ jobs:
       - name: Update image tag version
         run: |
           cd kubernetes
-          kustomize edit set image microservices-analysis=binesty.azurecr.io/microservices-analysis:${{ steps.update.outputs.newVersion }}"
+          kustomize edit set image microservices-analysis=binesty.azurecr.io/microservices-analysis:${{ steps.gitversion.outputs.semVer }}
 
       - name: Commit changes version 
         run: |
