--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -74,7 +74,7 @@ jobs:
 
       - name: Set version
         id: package_version
-        uses: MWin10/set-csproj-version-fork@latest
+        uses: MWin10/set-csproj-version-fork@v1.5.0
         with:
           file: source/Microservices.Analysis/Microservices.Analysis.csproj
           version: ${{ steps.gitversion.outputs.semVer }}
